# al-tool

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  todo.md
backend/: .gitignore  README.md  pyproject.toml
backend/src/altool/: __init__.py  main.py
backend/src/altool/api/: __init__.py  app.py
backend/src/altool/api/routers/: atribuicoes.py  bases.py  conciliacoes.py  configs.py  debug.py  keys.py  license.py  maintenance.py
backend/src/altool/domain/: __init__.py  atribuicao.py  columns.py  constants.py  estorno.py  fingerprint.py  matching.py  nulls.py
backend/src/altool/engine/: __init__.py  atribuicao.py  conciliacao.py  data_store.py  db.py  export.py  ingest.py  pipeline.py
backend/src/altool/metadata/: store.py
backend/src/altool/services/: atribuicoes.py  bases.py  conciliacoes.py  configs.py  jobs.py  keys.py  licensing.py  maintenance.py
backend/tests/: test_api.py  test_atribuicao.py  test_atribuicoes.py  test_bases.py  test_columns.py  test_conciliacao.py  test_conciliacoes.py  test_configs_keys.py  test_endpoints_extra.py  test_estorno.py  test_export.py  test_fidelidade_shape.py  test_fingerprint.py  test_ingest_formats.py  test_license.py  test_matching.py  test_multichave.py  test_nulls.py  test_pipeline.py
backend/tests/fixtures/: sample.csv  sample.xlsx
backend/tests/integration/: conftest.py  test_atribuicao_real.py  test_conciliacao_real.py  test_export_real.py  test_ingest_real.py  test_multichave_real.py  test_pipeline_real.py
docs/: regras-de-negocio.md  (+6 more)
(+232 files in other folders)
