[project]
name = "altool"
version = "0.1.0"
description = "AL-Tool v2 backend — conciliação contábil × fiscal (FastAPI + DuckDB + Polars)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "duckdb>=1.1",
    "polars>=1.9",
    "pyarrow>=18.0",
    "python-calamine>=0.3",
    "xlsxwriter>=3.2",
    "pydantic>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "httpx>=0.27",
    "ruff>=0.7",
    "mypy>=1.13",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q -m 'not integration'"
markers = [
    "integration: testes contra planilhas reais em storage/ref (lentos; rodar com -m integration)",
]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["altool"]
